released v0.2.1 - fixed overflow issues and tweaked page padding

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -163,7 +163,7 @@ hr {
 }
 
 h1, h2, h3 {
-  font-size: clamp(4rem, 25vmin, 7rem);
+  font-size: clamp(2.5rem, 23vmin, 7rem);
   font-weight: lighter;
   line-height: 1em;
   letter-spacing: -0.02em;
